--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,13 @@
+org.gradle.script.lang.kotlin.accessors.auto=true
+#
+javaVersion = 1.8
 kotlinVersion=1.1.4-3
 teamcityVersion=10.0.5
 com.github.rodm.gradle-teamcity-plugin=1.0
-
+#
 version=0.1
 developerName=Victor Alenkov (@vvalenkov)
 developerEmail=Victor@Alenkov.name
-
+#
 plugin.name=Release Version Generator
 description=
