0) update plugin description 1) refactoring of a code 2) update Gradle wrapper version

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,10 @@ kotlinVersion=1.1.4-3
 teamcityVersion=10.0.5
 com.github.rodm.gradle-teamcity-plugin=1.0
 #
-version=0.1
+version=0.2
 developerName=Victor Alenkov (@vvalenkov)
 developerEmail=Victor@Alenkov.name
+vcsUrl=https://github.com/itbasis/teamcity-release-version-plugin
 #
 plugin.name=Release Version Generator
 description=
